fix: bug de z-index

--- a/src/components/sections/Dashboard/Dashboard.module.scss
+++ b/src/components/sections/Dashboard/Dashboard.module.scss
@@ -6,7 +6,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 0 2rem;
-    // background-color: red;
+    position: relative;
 }
 
 .box {
